# FMADOOD

./: .gitignore  .gitmodules  README.md  README_FLOW_TTE.md  VAND2025_track1_MAD2_reproduce_final_result.sh  check_and_prepare_data_for_upload.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  test_private.py  test_public.py
PaperWorks/: Outline.md
configs/: default.yaml
docker/: Dockerfile.superad
fmad/: __init__.py  pipeline.py  registry.py  results.py
pretested_threshold/: metrics_seed=0.json
scripts/: __init__.py  aggregate_flow_tte_ad2_guided_chunks.py  aggregate_mvtecad1_metric_chunks.py  analyze_flowtte_gap_decomposition.py  analyze_flowtte_phase1_normalization.py  analyze_flowtte_phase2_refinement.py  analyze_flowtte_stack_qm_guided.py  analyze_flowtte_transformer_failure_maps.py  combine_mvtecad1_hybrid_metrics.py  dinov3_backbone.py  flow_tte_components.py  flow_tte_dvt_structural_utils.py  flow_tte_map_metrics.py  flow_tte_morphology_audit.py  flow_tte_mvtec_ad2_core.py  flow_tte_mvtec_classic.py  flow_tte_postprocess_core.py  flow_tte_postprocess_eval.py  flow_tte_raw_nn.py  flow_tte_register_analysis_extract.py  flow_tte_register_analysis_metrics.py  flow_tte_register_analysis_rows.py  flow_tte_register_analysis_types.py  flow_tte_score_field.py  flow_tte_score_field_analysis.py  flow_tte_score_priors.py  flow_tte_superadd_preprocess.py  flow_tte_support.py  launch_mvtecad1_visionad_identity_density_remote.sh  orchestrate_basic_hparam_stages.py  preflight_dinov2_cache.py  prepare_and_run_mvtecad1_ood_shots_dsba3.sh  (+69 more)
src/: sampler.py  (+12 more)
(+302 files in other folders)
