[project]
name = "fsad-tta"
version = "0.1.0"
description = "Flow-guided test-time memory expansion experiments for few-shot anomaly detection."
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "torch>=2.0",
    "typing-extensions>=4.4",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.31",
    "pytest>=8.0",
    "ruff>=0.12",
]

[project.scripts]
flow-tte-smoke = "flow_tte.smoke:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flow_tte"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "D100",
    "D104",
    "D203",
    "D212",
    "EM101",
    "FBT001",
    "FBT002",
    "PLR0402",
    "PLR2004",
    "TC001",
    "TC002",
    "TRY003",
    "T201",
    "UP006",
    "UP037",
    "UP045",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.basedpyright]
include = ["src/flow_tte"]
extraPaths = ["src"]
pythonVersion = "3.8"
typeCheckingMode = "all"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnusedCallResult = false
